# zeno

./: .clang-format  .editorconfig  .gitattributes  CMakeLists.txt  README.md
cmake/modules/: CopyObjectLibrary.cmake  EnsureOutOfSourceBuild.cmake  GuessTarget.cmake  SetDefaultBuildType.cmake  copy-objlib.py  copy_object_library.py  guess-target.c
cmake/toolchains/: README.md  clang-i386-linux.cmake  clang-wasm32-wasi.cmake  clang-x86_64-linux.cmake  gcc-cross-x86_64-linux.cmake  gcc-multilib-i386-linux.cmake  icc-i386-linux.cmake  icc-x86_64-linux.cmake
cmake/toolchains/base/: clang.cmake  gcc-cross.cmake  icc.cmake
docs/: references.md
include/common/: assert.h  errno.h  float.h  inttypes.h  limits.h  stdarg.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h
include/common/bits/: cdefs.h  integer_constants.h  limits.h  stdarg.h  types.h
include/common/zeno/: cdefs.h  integer_constants.h  limits.h  null.h  stdarg.h  stdint.h  types.h
include/generic/: ctype.h  fenv.h  float.h  iso646.h  setjmp.h  signal.h  stdalign.h  stdbool.h  stddef.h  stdlib.h  stdnoreturn.h  sysexits.h  time.h  unistd.h
include/generic/bits/: features.h  null.h  stdint.h  types.h
include/linux/i386/sys/: syscall.h
include/linux/i386/zeno/: config.h
include/linux/x86-generic/bits/: config.h  fenv.h
include/linux/x86-i386/bits/: setjmp.h
include/linux/x86-x86_64/bits/: setjmp.h
include/linux/x86/common/bits/: errno.h
include/linux/x86/common/zeno/: config.h  errno.h
include/linux/x86_64/sys/: syscall.h
include/linux/x86_64/zeno/: config.h
include/wasi/bits/: config.h  errno.h  fenv.h  setjmp.h
lib/: libc.imports
src/: CMakeLists.txt
src/basic/: asm.h  cdefs.h
src/basic/linux/: syscall.h
src/basic/linux/i386/: syscall.h
src/basic/linux/x86_64/: syscall.h
src/basic/wasi/: api.h
src/builtins/: CMakeLists.txt  __divdi3.c  __divmoddi4.c  __moddi3.c  __udivdi3.c  __udivmoddi4.c  __umoddi3.c  libgcc.h
src/crt/: CMakeLists.txt  README.md
src/crt/linux/: CMakeLists.txt  crt.h  crtbegin.c  crtend.c
src/crt/linux/i386/: crt1.S  crti.S  crtn.S
src/crt/linux/x86_64/: crt1.S  crti.S  crtn.S
src/ctype/: CMakeLists.txt  isalnum.c  isalpha.c  isblank.c  iscntrl.c  isdigit.c  isgraph.c  islower.c  isprint.c  ispunct.c  isspace.c  isupper.c  isxdigit.c  tolower.c  toupper.c
src/errno/: CMakeLists.txt  __libc_errno.c
src/fenv/: CMakeLists.txt  feclearexcept.c  fegetexceptflag.c  fegetmode.c  feholdexcept.c  feraiseexcept.c  fesetmode.c  fesetround.c  fetestexceptflag.c  feupdateenv.c  impl.h
src/fenv/wasm/: fenv.c
src/fenv/x86/: CMakeLists.txt  fesetenv.c  fesetexceptflag.c  impl.h
src/fenv/x86/i386/: __libc_fesetenv.S  __libc_fesetround.S  fegetenv.S  fegetround.S  fesetexcept.S  fetestexcept.S
src/fenv/x86/x86_64/: __libc_fesetenv.S  __libc_fesetround.S  fegetenv.S  fegetround.S  fesetexcept.S  fetestexcept.S
src/initfini/: CMakeLists.txt  __libc_init.c  assert.c  atexit.c  exit.c  impl.h  initfini.h
src/initfini/linux/: CMakeLists.txt  _Exit.c  __libc_csu_fini.c  __libc_csu_init.c  __libc_start_main.c  exit.c  impl.h  initfini.h
src/initfini/wasi/: CMakeLists.txt  _Exit.c  __original_main.c  _start.c  exit.c
src/malloc/: CMakeLists.txt  terrible.c
src/random/: CMakeLists.txt  pcg32.c  pcg32.h  rand.c  rand_r.c  random.c
src/setjmp/: CMakeLists.txt
src/setjmp/i386/: longjmp.S  setjmp.S
src/setjmp/x86_64/: longjmp.S  setjmp.S
src/stdio/: CMakeLists.txt  fflush.c  fputs.c  fwrite.c  puts.c  std_streams.c
src/stdio/linux/: fwrite.c  write.c
src/stdio/wasi/: CMakeLists.txt  fwrite.c  write.c
src/stdlib/: CMakeLists.txt  abs.c  div.c  environ.c  getenv.c  imaxabs.c  impl.h  labs.c  ldiv.c  llabs.c  lldiv.c
src/string/: CMakeLists.txt  memccpy.c  memchr.c  memcmp.c  memcpy.c  memmove.c  memset.c  strcat.c  strchr.c  strcmp.c  strcpy.c  strcspn.c  strlen.c  strncat.c  strncmp.c  strncpy.c  strpbrk.c  strrchr.c  strspn.c  strstr.c  strtok.c
src/time/: CMakeLists.txt  difftime.c  impl.h  mktime.c  time.c  timespec_get.c
src/time/linux/: clock.c  clock_gettime.c
src/time/wasi/: CMakeLists.txt  clock.c  clock_gettime.c
test/: CMakeLists.txt  check_program.py  header_test.h  limits.c  memcpy.c  run_wasmtime.py  stdarg.c  stddef.c  stdint.c  stdlib.c  test.h  unit_test.c  unit_test.h  unit_test_main.c  wasmtime-runner.py
test/ctype/: c_locale.c
test/header/: CMakeLists.txt  fenv.c  float.c  inttypes.c  limits.c  stdarg.c  stddef.c  stdint.c  stdlib.c  stdnoreturn.c  string.c  time.c
test/initfini/: constructor.c  main_args.c
test/program/: CMakeLists.txt
test/program/initfini/: CMakeLists.txt  assert_xfail.c  atexit.c  constructor.c  main_args.c
test/program/random/: CMakeLists.txt  rand.c  random.c
test/program/setjmp/: CMakeLists.txt  nonzero_value.c  zero_value.c
test/program/stdio/: CMakeLists.txt  fwrite.c
test/program/stdlib/: CMakeLists.txt  getenv.c
test/program/unit_test/: CMakeLists.txt  assert.c  assert_messages.c  skip.c  test_ordering.c
test/random/: rand.c  rand_r.c  random.c
test/string/: memcmp.c  memcpy.c  memmove.c  strcat.c  strncat.c  strncmp.c  strncpy.c  strspn.c
test/time/: clock.c
test/unit/: CMakeLists.txt
test/unit/builtins/: CMakeLists.txt  __divdi3.c  __moddi3.c  __udivdi3.c  __udivmoddi4.c  __udivmoddi4_data.inl  __umoddi3.c
test/unit/ctype/: CMakeLists.txt  c_locale.c
test/unit/fenv/: CMakeLists.txt  environment.c  exceptions.c  fesetround.c
test/unit/misc/: CMakeLists.txt  stdarg.c
test/unit/random/: CMakeLists.txt  rand_r.c
test/unit/string/: CMakeLists.txt  memccpy.c  memchr.c  memcmp.c  memcpy.c  memmove.c  memset.c  strcat.c  strchr.c  strcmp.c  strcpy.c  strcspn.c  strlen.c  strncat.c  strncmp.c  strncpy.c  strpbrk.c  strrchr.c  strspn.c  strstr.c  strtok.c
test/unit/time/: CMakeLists.txt  clock.c  clock_gettime.c  mktime.c  time.c  timespec_get.c
