# SPDX-License-Identifier: CC0-1.0

add_subdirectory(builtins)
add_subdirectory(crt)
add_subdirectory(ctype)
add_subdirectory(errno)
add_subdirectory(fenv)
add_subdirectory(initfini)
add_subdirectory(malloc)
add_subdirectory(random)
add_subdirectory(setjmp)
add_subdirectory(stdio)
add_subdirectory(stdlib)
add_subdirectory(string)
add_subdirectory(time)
